--- a/mak-backend-http/.classpath
+++ b/mak-backend-http/.classpath
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry kind="src" output="target/scala-2.11/classes" path="scala/src"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v6.0">
 		<attributes>
@@ -13,5 +14,16 @@
 			<attribute name="owner.project.facets" value="java"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="con" path="org.scala-ide.sdt.launching.SCALA_CONTAINER"/>
 	<classpathentry kind="output" path="build/classes"/>
+  <classpathentry kind="lib" path="./lib/gson-2.2.4-javadoc.jar"/>
+  <classpathentry kind="lib" path="./lib/gson-2.2.4.jar"/>
+  <classpathentry kind="lib" path="./lib/jline-1.0.jar"/>
+  <classpathentry kind="lib" path="./lib/one-jar-ant-task-0.97.jar"/>
+  <classpathentry kind="lib" path="/Users/cristi/.ivy2/cache/org.scala-js/scalajs-library_2.11/jars/scalajs-library_2.11-0.6.1.jar"/>
+  <classpathentry kind="lib" path="/Users/cristi/.ivy2/cache/org.scala-js/scalajs-dom_sjs0.6_2.11/jars/scalajs-dom_sjs0.6_2.11-0.8.0.jar"/>
+  <classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+
+
+
 </classpath>
