--- a/mak-backend-http/WebContent/WEB-INF/web.xml
+++ b/mak-backend-http/WebContent/WEB-INF/web.xml
@@ -1,19 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" id="WebApp_ID" version="2.5">
   <display-name>mak-backend</display-name>
-  <filter>
-        <filter-name>makumba_controller</filter-name>
-        <filter-class>org.makumba.controller.http.ControllerFilter</filter-class>
-  </filter>
-  <filter-mapping>
-        <filter-name>makumba_controller</filter-name>
-        <url-pattern>/mak-tools</url-pattern>
-  </filter-mapping>
-  <filter-mapping>
-        <filter-name>makumba_controller</filter-name>
-        <url-pattern>/mak-tools/*</url-pattern>
-  </filter-mapping>
   
+  <filter>
+    <filter-name>CorsFilter</filter-name>
+    <filter-class>util.CORSFilter</filter-class>
+</filter>
+ 
+<filter-mapping>
+    <filter-name>CorsFilter</filter-name>
+    <url-pattern>/*</url-pattern>
+</filter-mapping>  
   
      <servlet>
     <description></description>
